# hermes-auxiliary-brain

./: .gitignore  AGENTS.md  LICENSE  README.md  __init__.py  after-install.md  install.py  plan.md  plugin.yaml  pyproject.toml
.github/workflows/: ci.yml
auxiliary_brain/: __init__.py  config.py  diagnostics.py  llama_server.py  local_api.py  plugin.py  runtime.py  store.py  tasks.py  trainer_backend.py  training.py  training_data.py  version.py
dashboard/: manifest.json  plugin_api.py
docs/: feasibility.md  training.md
scripts/: backup_brain_db.py
tests/: test_backup_brain_db.py  test_config.py  test_dashboard_api.py  test_dashboard_auth_integration.py  test_diagnostics.py  test_gateway_slash.py  test_hermes_integration.py  test_install.py  test_llama_server.py  test_local_api.py  test_plugin.py  test_plugin_training_cli.py  test_runtime.py  test_store.py  test_tasks.py  test_trainer_backend.py  test_training.py  test_training_data.py  test_versioning.py
